# TriMCP

./: .commit_msg  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  Batch_100_prompt.md  Batch_101_prompt.md  Batch_102_prompt.md  Batch_103_prompt.md  Batch_104_prompt.md  Batch_105_prompt.md  Batch_106_prompt.md  Batch_107_prompt.md  Batch_108_prompt.md  Batch_109_prompt.md  Batch_10_prompt.md  Batch_110_prompt.md  Batch_111_prompt.md  Batch_112_prompt.md  Batch_113_prompt.md  Batch_114_prompt.md  Batch_115_prompt.md  Batch_116_prompt.md  Batch_117_prompt.md  Batch_118_prompt.md  Batch_119_prompt.md  Batch_11_prompt.md  Batch_120_prompt.md  Batch_121_prompt.md  Batch_122_prompt.md  Batch_123_prompt.md  Batch_124_prompt.md  Batch_125_prompt.md  Batch_126_prompt.md  Batch_127_prompt.md  Batch_128_prompt.md  Batch_129_prompt.md  Batch_12_prompt.md  Batch_130_prompt.md  Batch_131_prompt.md  (+224 more)
.github/: dependabot.yml
Instructions/: TriMCP - Python Dependencies.md  TriMCP Agent Prompt.md  TriMCP Environment Variables.md  TriMCP Infrastructure.md  TriMCP Memory Architecture.md  TriMCP Orchestrator.md
admin/: index.html  input.css  styles.css
go/: go.mod  (+1 more)
src/nce-netbox-plugin/: MANIFEST.in  README.md  pyproject.toml
src/nce-netbox-plugin/nce_netbox_plugin/: __init__.py  template_content.py
src/nce-netbox-plugin/nce_netbox_plugin/api/: simulators.py  urls.py  views.py
src/nce-netbox-plugin/nce_netbox_plugin/static/nce_netbox_plugin/css/: nce_netbox_plugin.css
src/nce-netbox-plugin/nce_netbox_plugin/templates/nce_netbox_plugin/: cognitive_panel.html
(+690 files in other folders)
