[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nce-netbox-plugin"
version = "0.1.0"
description = "NetBox plugin integrating NCE core operator stress, incidents, and fault maps"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["nce_netbox_plugin*"]

